added room component

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,5 +1,6 @@
 <md-toolbar color="primary">
   <button md-button routerLink="chat">Chat</button>
+  <button md-button routerLink="room/1">Room</button>
 </md-toolbar>
 
 <router-outlet></router-outlet>
