--- a/webapp/src/app/chat/chat.component.html
+++ b/webapp/src/app/chat/chat.component.html
@@ -13,5 +13,8 @@
     <md-card-title>
       Select room
     </md-card-title>
+    <md-card-content>
+      <button md-button *ngFor="let room of roomList" (click)="openRoom(room)"> {{ room.name }} </button>
+    </md-card-content>
   </md-card>
 </div>
